Change gold mine to flag

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
 						<select class="form-control" id="terrain">
 							<option value="2" selected="selected">Water</option>
 							<option value="1">Land</option>
-							<option value="0">Gold Mine</option>
+							<option value="0">Flag</option>
 						</select>
 					</div>
 				</div>
 				<div class="list-group-item list-group-item-action list-group-item-primary">
-					Mark Gold |
+					Mark Flag |
 					<input type="radio" id="boolGold" onclick="noGold(event)">
 				</div>
 			</div>
